tests/expected_invalid_foreign_fn_grants.diag.out
<input>:4:34: error: foreign functions may not declare `grants`
    public foreign fn open() -> Unit grants Access
                                     ^^^^^^
